fix(frontend): fix z-index issues

--- a/packages/frontend/src/components/nav-theme-switcher/styles.module.css
+++ b/packages/frontend/src/components/nav-theme-switcher/styles.module.css
@@ -17,7 +17,7 @@
 }
 
 .overlay {
-    @apply z-20
+    @apply z-30
         flex
         sm:hidden
         fixed
